--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 
 body{
   margin:0;
-  background:
-    radial-gradient(circle at 20% 0%, rgba(212,175,55,0.08), transparent 40%),
-    radial-gradient(circle at 80% 100%, rgba(212,175,55,0.05), transparent 40%),
-    linear-gradient(135deg,#0f0f0f,#1a1a1a);
+  background: radial-gradient(circle at 50% 20%, #2a2a2a 0%, #121212 40%, #0a0a0a 100%);
   color:#fff;
   scroll-behavior:smooth;
+  position:relative;
+  overflow-x:hidden;
 }
+
+
 
 /* LOADER */
 #loader{
@@ -141,6 +142,11 @@ header{
   margin-bottom:15px;
 }
 
+.card.vertical img{
+  height:260px;
+  object-fit:cover;
+}
+
 /* TITLE */
 .card h3{
   margin:10px 0 15px;
@@ -183,6 +189,39 @@ button:hover{
   opacity:1;
   transform:translateY(0);
 }
+
+.trust{
+  text-align:center;
+  color:#ccc;
+  font-size:14px;
+  margin-top:10px;
+  letter-spacing:1px;
+}
+
+
+body::before{
+  content:"";
+  position:fixed;
+  inset:0;
+  pointer-events:none;
+  background-image:
+    radial-gradient(3px 3px at 15% 20%, rgba(255,215,120,0.9), transparent),
+    radial-gradient(2px 2px at 25% 60%, rgba(255,215,120,0.8), transparent),
+    radial-gradient(2px 2px at 70% 30%, rgba(255,215,120,0.7), transparent),
+    radial-gradient(3px 3px at 85% 70%, rgba(255,215,120,0.9), transparent),
+    radial-gradient(2px 2px at 40% 80%, rgba(255,215,120,0.8), transparent),
+    radial-gradient(3px 3px at 60% 50%, rgba(255,215,120,0.7), transparent);
+  background-repeat:no-repeat;
+  animation:particlesMove 25s linear infinite;
+  opacity:0.8;
+}
+
+@keyframes particlesMove{
+  from{transform:translateY(0);}
+  to{transform:translateY(-60px);}
+}
+
+
 </style>
 </head>
 
@@ -201,6 +240,11 @@ button:hover{
 
 
 </header>
+
+<p class="trust">
+Garantia em todos os serviços • Atendimento rápido • Orçamento sem compromisso
+</p>
+
 
 <div class="container">
 <div class="section-title">🛠 Serviços</div>
@@ -247,13 +291,13 @@ button:hover{
 
 <div class="section-title">📱 Capinhas</div>
 <div class="grid">
-  <div class="card" onclick="pedido('Capinha Android')">
+  <div class="card vertical" onclick="pedido('Capinha Android')">
     <img src="imagens/capinha-android.jpg">
     <h3>Capinha Android</h3>
     <button>Consultar valor</button>
   </div>
 
-  <div class="card" onclick="pedido('Capinha iPhone')">
+  <div class="card vertical" onclick="pedido('Capinha iPhone')">
     <img src="imagens/capinha-iphone.jpg">
     <h3>Capinha iPhone</h3>
     <button>Consultar valor</button>
